Let File Layers report errors with filesystem via node properties

Now the user can see an exclamation mark near the file layer's name
when the layer fails to access/parse the linked file. The user can hover
the exclamation mark and see what actually hapened.

BUG:446832