libs/ui/kis_file_layer.h
@@ -76,10 +76,21 @@ public:
 
 private Q_SLOTS:
     void slotLoadingFinished(KisPaintDeviceSP projection, qreal xRes, qreal yRes, const QSize &size);
+    void slotLoadingFailed();
+    void slotFileExistsStateChanged(bool exists);
     void openFile() const;
 
 Q_SIGNALS:
     void sigRequestOpenFile();
+
+private:
+    enum State {
+        FileLoaded,
+        FileNotFound,
+        FileLoadingFailed
+    };
+
+    void changeState(State newState);
 
 private:
     QString m_basePath;
@@ -91,6 +102,8 @@ private:
     QSize m_generatedForImageSize;
     qreal m_generatedForXRes = 0.0;
     qreal m_generatedForYRes = 0.0;
+
+    State m_state = FileNotFound;
 };
 
 #endif // KIS_FILE_LAYER_H
